adding alliance system to the game